# Secure-Four-in-a-Row-Online

./: CMakeLists.txt
Client/: FOC_CA_cert.pem  FOC_CA_crl.pem  client  client.cpp
Client/andrea/: andrea_prvkey.pem  andrea_pubkey.pem
Client/edoardo/: edoardo_prvkey.pem
Client/tom/: tom_prvkey.pem
Common/: const.h
Game/: game.cpp  game.h
Server/: prvkey.pem  server  server.cpp
Server/cert/: FOC_cert.pem  certreq.pem
Server/pubkeys/: edoardo_pubkey.pem  tom_pubkey.pem
